bk_ida/gccida/g3/load_pic_register
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/load_pic_register/src/i386.c:4393:35: error: use of undeclared identifier 'machine_mode'
v3 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), pic_label_name); 
                                  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/load_pic_register/src/obj/i386.o] Error 1
